# Tauri-Template

./: .env.example  .gitignore  .kniprc  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  HUMANS_SHOULD_TEST.md  Makefile  PRD.md  README.md  RELEASING.md  TODO.md  biome.json  deny.toml  knip.config.json  knip.json  main.py  package.json  prek.toml  pyproject.toml
.agents/rules/: codex-claude-sync.md
.claude/agents/: folder-refactor-advisor.md  thermo-nuclear-code-quality-review.md
.claude/rules/: claude-md-guide.md  (+1 more)
.cursor/: environment.json  setup-worktree-unix.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.ralphy/: config.yaml
common/: global_config.py
crates/engine/: Cargo.toml
crates/engine/src/: commands.rs  doctor.rs  platform.rs  probes.rs  scenario.rs  traits.rs  types.rs
crates/onboard/: Cargo.toml
crates/onboard/src/: main.rs  ui.rs
crates/onboard/src/steps/: deps.rs  env.rs  hooks.rs  media.rs  mod.rs  rename.rs
docs/: PRD.md  TEST_COVERAGE_ANALYSIS.md  middleware.ts  ops.md  package.json  translation-guide.md
init/: generate_banner.py  generate_logo.py
manual_docs/: branch_comparison.md  configuration.md  updating_template.md
python_common/: flags.py  global_config.py
scripts/: check_ai_writing.ts  check_file_length.ts  check_folder_sizes.sh  check_import_boundaries.ts  check_large_files.sh  ralph.sh  sync_agent_config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  deny.toml  global_config.yaml  tauri.conf.json
tests/: test_logging_security.py  test_logging_thread_safety.py  test_template.py
(+86 files in other folders)
