[package]
name = "engine"
version = "0.1.0"
edition = "2021"
description = "Headless engine for the Tauri template app – shared between GUI and CLI"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider", "http2", "charset", "system-proxy"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net", "io-util"] }
thiserror = "2"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.27.0"
